make sure Save button is visible in TinyMCE Full Screeen Mode

--- a/share/css/backoffice.css
+++ b/share/css/backoffice.css
@@ -259,7 +259,7 @@ div.CodeMirror {font-size: 13px;}
 div.twoColumnPage { padding: 0 20px; margin: 0;}
 div.twoColumnPage div.twoColumnPage { padding: 0; margin: 0;}
 div.rowBottom { height: 60px;}
-div.rowBottom div.rowWrapper { position: fixed; z-index: 3000; width: 100%; left: 0; bottom: 0; height: 60px; background: rgba(250,250,250,0.9); border-top: 1px solid #fff; margin: 0 0 0 130px; padding: 15px 0 0 20px; box-shadow: 4px 0 6px rgba(0,0,0,0.4); }
+div.rowBottom div.rowWrapper { position: fixed; z-index: 250000; /*needs to be higher than div#mce_fullscreen_container for TinyMCE Full Screen mode*/ width: 100%; left: 0; bottom: 0; height: 60px; background: rgba(250,250,250,0.9); border-top: 1px solid #fff; margin: 0 0 0 130px; padding: 15px 0 0 20px; box-shadow: 4px 0 6px rgba(0,0,0,0.4); }
 div.rowBottom div.rowWrapper p { display: inline-block; padding: 0; margin: 0 20px 0 0;}
 div.rowBottom div.rowWrapper p a, #toolBar p button { margin: 0 5px 0 0; }
 div.popup div.rowBottom div.rowWrapper { margin: 0; }
@@ -332,7 +332,7 @@ div.onxshop_tabs ul li.active a:after { content: ''; position: absolute; top: 29
  */
 html.noscroll, body.noscroll { overflow: hidden; width: 100%; height: 100%; }
 body.noscroll #backoffice { overflow: hidden; width: 100%; height: 100%; }
-#modal_overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(255, 255, 255, 0.3); z-index: 4000; overflow-y: scroll;  webkit-transition: all 150ms ease-in; -moz-transition: all 150ms ease-in; -o-transition: all 150ms ease-in; transition: all 150ms ease-in;}
+#modal_overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(255, 255, 255, 0.3); z-index: 300000; /*needs to be higher than div.rowBottom div.rowWrapper*/ overflow-y: scroll;  webkit-transition: all 150ms ease-in; -moz-transition: all 150ms ease-in; -o-transition: all 150ms ease-in; transition: all 150ms ease-in;}
 #modal_overlay.off { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: transparent; z-index: 1000; overflow-y: scroll;  webkit-transition: all 150ms ease-in; -moz-transition: all 150ms ease-in; -o-transition: all 150ms ease-in; transition: all 150ms ease-in;}
 #model_click_zone { position: fixed; top: 0; left: 0; width: 20%; height: 100%; cursor: pointer; }
 #modal_overlay_window { position: static; opacity: 1; margin-left: 20%; width: 80%; min-height: 100%; padding: 0; overflow: auto; background: #ffffff; box-shadow: -1px 0 5px rgba(0,0,0,0.4); webkit-transition: all 150ms ease-out; -moz-transition: all 150ms ease-out; -o-transition: all 150ms ease-out; transition: all 150ms ease-out; }
